--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,10 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
                       http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-
+ <properties>
+   <maven.compiler.source>7</maven.compiler.source>
+   <maven.compiler.target>1.7</maven.compiler.target>
+ </properties>
 
     <groupId>com.jenkov</groupId>
 
